# currency-converter

./: Dockerfile  app.py  pyproject.toml  run.sh
app/: __init__.py  config.py  forms.py  models.py  rates.db  routes.py  utils.py
migrations/versions/: 08d3aaeca971_rename_chd_rate_to_chf_rate.py  d0c0721c294b_initial_migration.py
templates/: convert.html
