[tool.poetry]
name = "kursy"
version = "0.1.0"
description = ""
authors = ["m-powierza-quantee"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-WTF = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
